Compiler/tests/good/Output/08_output.rs
// Single line comment
fn main(){
  print!(-1);
  return;
}
