Compiler/tests/bad/Output/05_output.rs
// Single line comment
fn main(){
  let x :Vec3<i32> = vec![34];

  print!(x);
  return;
}
